# sdk

./: LICENSE  README.md
docs/: sequence_diagram.md
python/: .gitignore  pyproject.toml
python/examples/agno/: .gitignore  README.md  agent.py  requirements.txt
python/src/superface/: __init__.py
python/src/superface/agno/: README.md  superface.py
python/src/superface/client/: __init__.py  exceptions.py  schema_transformer.py  superface.py
python/src/superface/crewai/: __init__.py  superface.py
typescript/: .gitignore  README.md  jest.config.json  package-lock.json  package.json  tsconfig.json  tsup.config.json
typescript/examples/basics/: .gitignore  README.md  cli.ts  index.ts  package-lock.json  package.json
typescript/examples/openai/: .env.example  index.ts  package-lock.json  package.json  tsconfig.json
typescript/examples/openai/beta-automated-function-calls/: README.md  index.ts  package.json
typescript/examples/openai/handle-function-calls/: index.ts  package.json
typescript/examples/openai/handle-tool-calls/: README.md  tsconfig.json
typescript/src/client/: README.md  index.test.ts  index.ts
typescript/src/google/: README.md  index.test.ts  index.ts  tools.test.ts  tools.ts  utils.test.ts  utils.ts
typescript/src/openai/: README.md  beta.ts  index.ts
