[project]
name = "superface"
version = "0.1.2"
description = "Intelligent Tools for Agentic AI"
authors = [{ name = "Superface Team", email = "hello@superface.ai" }]
readme = "README.md"
keywords = ["superface", "ai", "agent", "tools", "integrations", "api", "client", "sdk"]
dependencies = [
    "requests",
    "pydantic>=2.0.0",
    "crewai>=0.80.0",
    "agno>=1.0.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
homepage = "https://superface.ai"
repository = "https://github.com/superfaceai/sdk"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"